--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header class="header" id="inicio">
         <img src="./img/menu2.png" alt="" class="hamburgesa">
-        <nav class="nav-navegacion spread">
+        <nav class="nav-navegacion">
             <a href="#inicio">Inicio</a>
             <a href="#nosotros">Nosotros</a>
             <a href="#imagenes">Imagenes</a>
