--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
     <main>
-        <section class="nosotros contenedor" id="Nosotros">
+        <section class="nosotros contenedor" id="nosotros">
             <h2 class="subtitulo">Nosotros</h2>
             <div class="contenedor-nosotros">
                 <img src="./img/images (5).jpg" alt="">
